Update information aboute hyperlink to access

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 						}
 					}
 				};
-				//xhttp.open( "GET", "http://127.0.0.1/data.php?option=all", true );
-				xhttp.open( "GET", "http://127.0.0.1:81/@estudo@/-- importante --/alertablu/final/data.php?option=all", true );
+				xhttp.open( "GET", "http://www.everton.mat.br/alertablu/data.php?option=all", true );
 				xhttp.send();
 			}
 			
